# ScentLib

./: .gitignore  README.md  RESEARCH.md  library_research.csv  pyproject.toml  requirements.txt  temporary_prompt.txt  test_export.csv
docs/: BLUEPRINT.md  RESEARCH.md  TECHNICAL_DECISIONS.md  api_v1.md  commands_v1.md  specification_v1.md
scentlib/api/: server.py
scentlib/core/: analytics.py  binary.py  cli.py  models.py  stream_handler.py  validator.py
schemas/: binary_specs.md  categories_v1.json  descriptor_map_v1.json  scent_schema.json
scripts/: mass_import_pyrfume.py  pyrfume_to_scent.py
